--- a/resources/src/mediawiki.special.userlogin.login.styles/login.less
+++ b/resources/src/mediawiki.special.userlogin.login.styles/login.less
@@ -11,21 +11,21 @@
 #mw-createaccount-join {
 	background-color: #f8f9fa;
 	color: #36c;
-}
 
-#mw-createaccount-join:hover {
-	background-color: #fff;
-	border-color: #859ecc;
-	box-shadow: none;
-}
+	&:hover {
+		background-color: #fff;
+		border-color: #859ecc;
+		box-shadow: none;
+	}
 
-#mw-createaccount-join:active {
-	background-color: #eff3fa;
-	color: #2a4b8d;
-	border-color: #2a4b8d;
-}
+	&:active {
+		background-color: #eff3fa;
+		color: #2a4b8d;
+		border-color: #2a4b8d;
+	}
 
-#mw-createaccount-join:focus {
-	border-color: #36c;
-	box-shadow: inset 0 0 0 1px #36c;
+	&:focus {
+		border-color: #36c;
+		box-shadow: inset 0 0 0 1px #36c;
+	}
 }
